[metadata]
name = rasdaq
version = attr: rdcli.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/rasdaq
description = A data logger for Raspberry PI with ADC input
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Physics, Data, Time series, Data analysis
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    rdcli = rdcli.__main__:main
    rdgui = rdgui.__main__:main